@@ -26,7 +26,7 @@ import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.LongAdder;
 import java.util.concurrent.locks.LockSupport;
 
 import org.apache.jmeter.config.Arguments;
@@ -39,35 +39,31 @@ import org.apache.jmeter.testelement.AbstractTestElement;
 import org.apache.jmeter.testelement.TestElement;
 import org.apache.jmeter.testelement.TestStateListener;
 import org.apache.jmeter.testelement.property.TestElementProperty;
-import org.apache.jorphan.logging.LoggingManager;
-import org.apache.log.Logger;
+import org.apache.jmeter.visualizers.backend.graphite.GraphiteBackendListenerClient;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Async Listener that delegates SampleResult handling to implementations of {@link BackendListenerClient}
  * @since 2.13
  */
 public class BackendListener extends AbstractTestElement
-    implements Serializable, SampleListener, TestStateListener, NoThreadClone, Remoteable  {
+    implements Backend, Serializable, SampleListener, 
+        TestStateListener, NoThreadClone, Remoteable {
 
-    /**
-     * 
-     */
     private static final class ListenerClientData {
         private BackendListenerClient client;
         private BlockingQueue<SampleResult> queue;
-        private AtomicLong queueWaits; // how many times we had to wait to queue a SampleResult        
-        private AtomicLong queueWaitTime; // how long we had to wait (nanoSeconds)
+        private LongAdder queueWaits; // how many times we had to wait to queue a SampleResult        
+        private LongAdder queueWaitTime; // how long we had to wait (nanoSeconds)
         // @GuardedBy("LOCK")
         private int instanceCount; // number of active tests
         private CountDownLatch latch;
     }
 
-    /**
-     * 
-     */
-    private static final long serialVersionUID = 8184103677832024335L;
+    private static final long serialVersionUID = 1L;
 
-    private static final Logger LOGGER = LoggingManager.getLoggerForClass();
+    private static final Logger log = LoggerFactory.getLogger(BackendListener.class);
 
     /**
      * Property key representing the classname of the BackendListenerClient to user.
@@ -98,7 +94,14 @@ public class BackendListener extends AbstractTestElement
     public static final String DEFAULT_QUEUE_SIZE = "5000";
 
     // Create unique object as marker for end of queue
-    private transient static final SampleResult FINAL_SAMPLE_RESULT = new SampleResult();
+    private static final transient SampleResult FINAL_SAMPLE_RESULT = new SampleResult();
+
+    /*
+     * This is needed for distributed testing where there is 1 instance
+     * per server. But we need the total to be shared.
+     */
+    private static final Map<String, ListenerClientData> queuesByTestElementName =
+            new ConcurrentHashMap<>();
 
     // Name of the test element. Set up by testStarted().
     private transient String myName;
@@ -106,22 +109,10 @@ public class BackendListener extends AbstractTestElement
     // Holds listenerClientData for this test element
     private transient ListenerClientData listenerClientData;
 
-    /*
-     * This is needed for distributed testing where there is 1 instance
-     * per server. But we need the total to be shared.
-     */
-    //@GuardedBy("LOCK") - needed to ensure consistency between this and instanceCount
-    private static final Map<String, ListenerClientData> queuesByTestElementName =
-            new ConcurrentHashMap<>();
-
     /**
      * Create a BackendListener.
      */
     public BackendListener() {
-        synchronized (LOCK) {
-            queuesByTestElementName.clear();
-        }
-
         setArguments(new Arguments());
     }
 
@@ -136,13 +127,14 @@ public class BackendListener extends AbstractTestElement
         return clone;
     }
 
-    private void initClass() {
+    private Class<?> initClass() {
         String name = getClassname().trim();
         try {
-            clientClass = Class.forName(name, false, Thread.currentThread().getContextClassLoader());
+            return Class.forName(name, false, Thread.currentThread().getContextClassLoader());
         } catch (Exception e) {
-            LOGGER.error(whoAmI() + "\tException initialising: " + name, e);
+            log.error("{}\tException initialising: {}", whoAmI(), name, e);
         }
+        return null;
     }
 
     /**
@@ -171,26 +163,26 @@ public class BackendListener extends AbstractTestElement
 
         SampleResult sr = listenerClientData.client.createSampleResult(context, event.getResult());
         if(sr == null) {
-            if(LOGGER.isDebugEnabled()) {
-                LOGGER.debug(getName()+"=>Dropping SampleResult:"+event.getResult());
+            if (log.isDebugEnabled()) {
+                log.debug("{} => Dropping SampleResult: {}", getName(), event.getResult());
             }
             return;
         }
         try {
             if (!listenerClientData.queue.offer(sr)){ // we failed to add the element first time
-                listenerClientData.queueWaits.incrementAndGet();
+                listenerClientData.queueWaits.add(1L);
                 long t1 = System.nanoTime();
                 listenerClientData.queue.put(sr);
                 long t2 = System.nanoTime();
-                listenerClientData.queueWaitTime.addAndGet(t2-t1);
+                listenerClientData.queueWaitTime.add(t2-t1);
             }
         } catch (Exception err) {
-            LOGGER.error("sampleOccurred, failed to queue the sample", err);
+            log.error("sampleOccurred, failed to queue the sample", err);
         }
     }
 
     /**
-     * Thread that dequeus data from queue to send it to {@link BackendListenerClient}
+     * Thread that dequeues data from queue to send it to {@link BackendListenerClient}
      */
     private static final class Worker extends Thread {
 
@@ -207,34 +199,42 @@ public class BackendListener extends AbstractTestElement
 
         @Override
         public void run() {
-            boolean isDebugEnabled = LOGGER.isDebugEnabled();
+            final boolean isDebugEnabled = log.isDebugEnabled();
             List<SampleResult> sampleResults = new ArrayList<>(listenerClientData.queue.size());
             try {
                 try {
 
                     boolean endOfLoop = false;
                     while (!endOfLoop) {
-                        if(isDebugEnabled) {
-                            LOGGER.debug("Thread:"+Thread.currentThread().getName()+" taking SampleResult from queue:"+listenerClientData.queue.size());
+                        if (isDebugEnabled) {
+                            log.debug("Thread: {} taking SampleResult from queue: {}", Thread.currentThread().getName(),
+                                    listenerClientData.queue.size());
                         }
                         SampleResult sampleResult = listenerClientData.queue.take();
-                        if(isDebugEnabled) {
-                            LOGGER.debug("Thread:"+Thread.currentThread().getName()+" took SampleResult:"+sampleResult+", isFinal:" + (sampleResult==FINAL_SAMPLE_RESULT));
+                        if (isDebugEnabled) {
+                            log.debug("Thread: {} took SampleResult: {}, isFinal: {}",
+                                    Thread.currentThread().getName(),
+                                    sampleResult,
+                                    sampleResult == FINAL_SAMPLE_RESULT);
                         }
-                        while (!(endOfLoop = (sampleResult == FINAL_SAMPLE_RESULT)) && sampleResult != null ) { // try to process as many as possible
+                        // try to process as many as possible
+                        // The == comparison is not a mistake
+                        while (!(endOfLoop = sampleResult == FINAL_SAMPLE_RESULT) && sampleResult != null ) { 
                             sampleResults.add(sampleResult);
-                            if(isDebugEnabled) {
-                                LOGGER.debug("Thread:"+Thread.currentThread().getName()+" polling from queue:"+listenerClientData.queue.size());
+                            if (isDebugEnabled) {
+                                log.debug("Thread: {} polling from queue: {}", Thread.currentThread().getName(),
+                                        listenerClientData.queue.size());
                             }
                             sampleResult = listenerClientData.queue.poll(); // returns null if nothing on queue currently
-                            if(isDebugEnabled) {
-                                LOGGER.debug("Thread:"+Thread.currentThread().getName()+" took from queue:"+sampleResult+", isFinal:" + (sampleResult==FINAL_SAMPLE_RESULT));
+                            if (isDebugEnabled) {
+                                log.debug("Thread: {} took from queue: {}, isFinal: {}", Thread.currentThread().getName(),
+                                        sampleResult, sampleResult == FINAL_SAMPLE_RESULT);
                             }
                         }
-                        if(isDebugEnabled) {
-                            LOGGER.debug("Thread:"+Thread.currentThread().getName()+
-                                    " exiting with FINAL EVENT:"+(sampleResult == FINAL_SAMPLE_RESULT)
-                                    +", null:" + (sampleResult==null));
+                        if (isDebugEnabled) {
+                            log.debug("Thread: {} exiting with FINAL EVENT: {}, null: {}",
+                                    Thread.currentThread().getName(), sampleResult == FINAL_SAMPLE_RESULT,
+                                    sampleResult == null);
                         }
                         sendToListener(backendListenerClient, context, sampleResults);
                         if(!endOfLoop) {
@@ -242,11 +242,11 @@ public class BackendListener extends AbstractTestElement
                         }
                     }
                 } catch (InterruptedException e) {
-                    // NOOP
+                    Thread.currentThread().interrupt();
                 }
                 // We may have been interrupted
                 sendToListener(backendListenerClient, context, sampleResults);
-                LOGGER.info("Worker ended");
+                log.info("Worker ended");
             } finally {
                 listenerClientData.latch.countDown();
             }
@@ -263,7 +263,7 @@ public class BackendListener extends AbstractTestElement
             final BackendListenerClient backendListenerClient,
             final BackendListenerContext context,
             final List<SampleResult> sampleResults) {
-        if (sampleResults.size() > 0) {
+        if (!sampleResults.isEmpty()) {
             backendListenerClient.handleSampleResults(sampleResults, context);
             sampleResults.clear();
         }
@@ -279,28 +279,23 @@ public class BackendListener extends AbstractTestElement
             return new ErrorBackendListenerClient();
         }
         try {
-            return (BackendListenerClient) clientClass.newInstance();
+            return (BackendListenerClient) clientClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
-            LOGGER.error("Exception creating: " + clientClass, e);
+            log.error("Exception creating: {}", clientClass, e);
             return new ErrorBackendListenerClient();
         }
     }
 
     // TestStateListener implementation
-    /**
-     *  Implements TestStateListener.testStarted() 
-     **/
     @Override
     public void testStarted() {
         testStarted("local"); //$NON-NLS-1$
     }
 
-    /** Implements TestStateListener.testStarted(String) 
-     **/
     @Override
     public void testStarted(String host) {
-        if(LOGGER.isDebugEnabled()){
-            LOGGER.debug(whoAmI() + "\ttestStarted(" + host + ")");
+        if (log.isDebugEnabled()) {
+            log.debug("{}\ttestStarted({})", whoAmI(), host);
         }
 
         int queueSize;
@@ -308,7 +303,7 @@ public class BackendListener extends AbstractTestElement
         try {
             queueSize = Integer.parseInt(size);
         } catch (NumberFormatException nfe) {
-            LOGGER.warn("Invalid queue size '" + size + "' defaulting to " + DEFAULT_QUEUE_SIZE);
+            log.warn("Invalid queue size '{}' defaulting to {}", size, DEFAULT_QUEUE_SIZE);
             queueSize = Integer.parseInt(DEFAULT_QUEUE_SIZE);
         }
 
@@ -318,21 +313,26 @@ public class BackendListener extends AbstractTestElement
             if (listenerClientData == null){
                 // We need to do this to ensure in Distributed testing 
                 // that only 1 instance of BackendListenerClient is used
-                initClass();
+                clientClass = initClass(); // may be null
                 BackendListenerClient backendListenerClient = createBackendListenerClientImpl(clientClass);
                 BackendListenerContext context = new BackendListenerContext((Arguments)getArguments().clone());
 
                 listenerClientData = new ListenerClientData();
                 listenerClientData.queue = new ArrayBlockingQueue<>(queueSize);
-                listenerClientData.queueWaits = new AtomicLong(0L);
-                listenerClientData.queueWaitTime = new AtomicLong(0L);
+                listenerClientData.queueWaits = new LongAdder();
+                listenerClientData.queueWaitTime = new LongAdder();
                 listenerClientData.latch = new CountDownLatch(1);
                 listenerClientData.client = backendListenerClient;
-                LOGGER.info(getName()+":Starting worker with class:"+clientClass +" and queue capacity:"+getQueueSize());
+                if (log.isInfoEnabled()) {
+                    log.info("{}: Starting worker with class: {} and queue capacity: {}", getName(), clientClass,
+                            getQueueSize());
+                }
                 Worker worker = new Worker(backendListenerClient, (Arguments) getArguments().clone(), listenerClientData);
                 worker.setDaemon(true);
                 worker.start();
-                LOGGER.info(getName()+": Started  worker with class:"+clientClass);
+                if (log.isInfoEnabled()) {
+                    log.info("{}: Started  worker with class: {}", getName(), clientClass);
+                }
                 try {
                     backendListenerClient.setupTest(context);
                 } catch (Exception e) {
@@ -355,24 +355,31 @@ public class BackendListener extends AbstractTestElement
     @Override
     public void testEnded(String host) {
         synchronized (LOCK) {
-            ListenerClientData listenerClientData = queuesByTestElementName.get(myName);
-            if(LOGGER.isDebugEnabled()) {
-                LOGGER.debug("testEnded called on instance "+myName+"#"+listenerClientData.instanceCount);
+            ListenerClientData listenerClientDataForName = queuesByTestElementName.get(myName);
+            if (log.isDebugEnabled()) {
+                log.debug("testEnded called on instance {}#{}", myName, listenerClientDataForName.instanceCount);
             }
-            listenerClientData.instanceCount--;
-            if (listenerClientData.instanceCount > 0){
-                // Not the last instance of myName
-                return;
+            if(listenerClientDataForName != null) {
+                listenerClientDataForName.instanceCount--;
+                if (listenerClientDataForName.instanceCount > 0){
+                    // Not the last instance of myName
+                    return;
+                } else {
+                    queuesByTestElementName.remove(myName);
+                }
+            } else {
+                log.error("No listener client data found for BackendListener {}", myName);
             }
         }
         try {
             listenerClientData.queue.put(FINAL_SAMPLE_RESULT);
         } catch (Exception ex) {
-            LOGGER.warn("testEnded() with exception:"+ex.getMessage(), ex);
+            log.warn("testEnded() with exception: {}", ex, ex);
         }
-        if (listenerClientData.queueWaits.get() > 0) {
-            LOGGER.warn("QueueWaits: "+listenerClientData.queueWaits+"; QueueWaitTime: "+listenerClientData.queueWaitTime+
-                    " (nanoseconds), you may need to increase queue capacity, see property 'backend_queue_capacity'");
+        if (listenerClientData.queueWaits.longValue() > 0) {
+            log.warn(
+                    "QueueWaits: {}; QueueWaitTime: {} (nanoseconds), you may need to increase queue capacity, see property 'backend_queue_capacity'",
+                    listenerClientData.queueWaits, listenerClientData.queueWaitTime);
         }
         try {
             listenerClientData.latch.await();
@@ -383,8 +390,6 @@ public class BackendListener extends AbstractTestElement
         }
     }
 
-    /** Implements TestStateListener.testEnded(String)
-     **/
     @Override
     public void testEnded() {
         testEnded("local"); //$NON-NLS-1$
@@ -405,7 +410,7 @@ public class BackendListener extends AbstractTestElement
          */
         @Override
         public void handleSampleResults(List<SampleResult> sampleResults, BackendListenerContext context) {
-            LOGGER.warn("ErrorBackendListenerClient#handleSampleResult called, noop");
+            log.warn("ErrorBackendListenerClient#handleSampleResult called, noop");
             Thread.yield();
         }
     }
@@ -434,6 +439,9 @@ public class BackendListener extends AbstractTestElement
      *            the new arguments. These replace any existing arguments.
      */
     public void setArguments(Arguments args) {
+        // Bug 59173 - don't save new default argument
+        args.removeArgument(GraphiteBackendListenerClient.USE_REGEXP_FOR_SAMPLERS_LIST, 
+                GraphiteBackendListenerClient.USE_REGEXP_FOR_SAMPLERS_LIST_DEFAULT);
         setProperty(new TestElementProperty(ARGUMENTS, args));
     }
 
@@ -470,7 +478,6 @@ public class BackendListener extends AbstractTestElement
      * Sets the queue size
      *
      * @param queueSize the size of the queue
-     *
      */
     public void setQueueSize(String queueSize) {
         setProperty(QUEUE_SIZE, queueSize, DEFAULT_QUEUE_SIZE);
