@@ -24,9 +24,9 @@ import java.beans.Introspector;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.prefs.Preferences;
 
 import javax.swing.JCheckBoxMenuItem;
 import javax.swing.JOptionPane;
@@ -37,6 +37,9 @@ import javax.swing.SwingUtilities;
 import org.apache.jmeter.engine.util.ValueReplacer;
 import org.apache.jmeter.exceptions.IllegalUserActionException;
 import org.apache.jmeter.gui.UndoHistory.HistoryListener;
+import org.apache.jmeter.gui.action.TreeNodeNamingPolicy;
+import org.apache.jmeter.gui.action.impl.DefaultTreeNodeNamingPolicy;
+import org.apache.jmeter.gui.logging.GuiLogEventBus;
 import org.apache.jmeter.gui.tree.JMeterTreeListener;
 import org.apache.jmeter.gui.tree.JMeterTreeModel;
 import org.apache.jmeter.gui.tree.JMeterTreeNode;
@@ -53,8 +56,8 @@ import org.apache.jmeter.util.JMeterUtils;
 import org.apache.jmeter.util.LocaleChangeEvent;
 import org.apache.jmeter.util.LocaleChangeListener;
 import org.apache.jorphan.collections.HashTree;
-import org.apache.jorphan.logging.LoggingManager;
-import org.apache.log.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * GuiPackage is a static class that provides convenient access to information
@@ -66,8 +69,16 @@ import org.apache.log.Logger;
  *
  */
 public final class GuiPackage implements LocaleChangeListener, HistoryListener {
-    /** Logging. */
-    private static final Logger log = LoggingManager.getLoggerForClass();
+
+    private static final Logger log = LoggerFactory.getLogger(GuiPackage.class);
+
+    private static final String SBR_PREFS_KEY = "save_before_run";
+
+    private static final String SAVE_BEFORE_RUN_PROPERTY = "save_automatically_before_run"; // $NON-NLS-1$
+    
+    private static final boolean SAVE_BEFORE_RUN_PROPERTY_DEFAULT_VALUE = true;
+
+    private static final Preferences PREFS = Preferences.userNodeForPackage(GuiPackage.class);
 
     /** Singleton instance. */
     private static GuiPackage guiPack;
@@ -112,24 +123,24 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
 
     /** The main JMeter toolbar. */
     private JToolBar toolbar;
-
-    /** The menu item toolbar. */
-    private JCheckBoxMenuItem menuToolBar;
-
-    /**
-     * The LoggerPanel menu item
-     */
+    
+    /** The LoggerPanel menu item */
     private JCheckBoxMenuItem menuItemLoggerPanel;
 
-    /**
-     * Logger Panel reference
-     */
+    /** The LoggerPanel menu item */
+    private JCheckBoxMenuItem menuItemSaveBeforeRunPanel;
+    
+    /** Logger Panel reference */
     private LoggerPanel loggerPanel;
 
-    /**
-     * History for tree states
-     */
+    /** History for tree states */
     private UndoHistory undoHistory = new UndoHistory();
+
+    /** GUI Logging Event Bus. */
+    private GuiLogEventBus logEventBus = new GuiLogEventBus();
+
+    /** Listeners for events on test plan */
+    private List<TestPlanListener> testPlanListeners = Collections.synchronizedList(new ArrayList<>());
 
     /**
      * Private constructor to permit instantiation only from within this class.
@@ -137,7 +148,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      */
     private GuiPackage(JMeterTreeModel treeModel, JMeterTreeListener treeListener) {
         this.treeModel = treeModel;
-        if(undoHistory.isEnabled()) {
+        if (UndoHistory.isEnabled()) {
             this.treeModel.addTreeModelListener(undoHistory);
         }
         this.treeListener = treeListener;
@@ -158,7 +169,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      * - Locale Changes
      */
     public void registerAsListener() {
-        if(undoHistory.isEnabled()) {
+        if(UndoHistory.isEnabled()) {
             this.undoHistory.registerHistoryListener(this);
         }
         JMeterUtils.addLocaleChangeListener(this);
@@ -172,16 +183,13 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      *            the TreeListener for JMeter's test tree
      * @param treeModel
      *            the model for JMeter's test tree
-     *
-     * @return GuiPackage
      */
-    public static GuiPackage getInstance(JMeterTreeListener listener, JMeterTreeModel treeModel) {
-        if (guiPack == null) {
-            guiPack = new GuiPackage(treeModel, listener);
-            guiPack.undoHistory.add(treeModel, "Created");
-        }
-        return guiPack;
+    public static void initInstance(JMeterTreeListener listener, JMeterTreeModel treeModel) {
+        GuiPackage guiPack = new GuiPackage(treeModel, listener);
+        guiPack.undoHistory.add(treeModel, "Created");
+        GuiPackage.guiPack = guiPack;
     }
+   
 
     /**
      * Get a JMeterGUIComponent for the specified test element. If the GUI has
@@ -243,7 +251,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
                 comp = getGuiFromCache(guiClass, testClass);
                 nodesToGui.put(node, comp);
             }
-            log.debug("Gui retrieved = " + comp);
+            log.debug("Gui retrieved = {}", comp);
             return comp;
         } catch (Exception e) {
             log.error("Problem retrieving gui", e);
@@ -272,13 +280,17 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
             updateCurrentNode();
             TestElement curNode = treeListener.getCurrentNode().getTestElement();
             JMeterGUIComponent comp = getGui(curNode);
+            if (comp == null) {
+                log.debug("No Component found for {}.", treeListener.getCurrentNode().getName());
+                return null;
+            }
             comp.clearGui();
             log.debug("Updating gui to new node");
             comp.configure(curNode);
             currentNodeUpdated = false;
             return comp;
         } catch (Exception e) {
-            log.error("Problem retrieving gui", e);
+            log.error("Problem retrieving current gui", e);
             return null;
         }
     }
@@ -351,7 +363,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
                     "Missing jar? See log file." ,
                     JOptionPane.ERROR_MESSAGE);
             throw new RuntimeException(e.toString(), e); // Probably a missing jar
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+        } catch ( ReflectiveOperationException e) {
             log.error("Problem retrieving gui for " + objClass, e);
             throw new RuntimeException(e.toString(), e); // Programming error: bail out.
         }
@@ -377,9 +389,9 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      * @throws IllegalAccessException
      *             if access rights do not allow the default constructor to be
      *             called
+     * @throws ReflectiveOperationException when construction of guiClass fails
      */
-    private JMeterGUIComponent getGuiFromCache(Class<?> guiClass, Class<?> testClass) throws InstantiationException,
-            IllegalAccessException {
+    private JMeterGUIComponent getGuiFromCache(Class<?> guiClass, Class<?> testClass) throws ReflectiveOperationException {
         JMeterGUIComponent comp;
         if (guiClass == TestBeanGUI.class) {
             comp = testBeanGUIs.get(testClass);
@@ -390,7 +402,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
         } else {
             comp = guis.get(guiClass);
             if (comp == null) {
-                comp = (JMeterGUIComponent) guiClass.newInstance();
+                comp = (JMeterGUIComponent) guiClass.getDeclaredConstructor().newInstance();
                 if (!(comp instanceof UnsharedComponent)) {
                     guis.put(guiClass, comp);
                 }
@@ -402,13 +414,25 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
     /**
      * Update the GUI for the currently selected node. The GUI component is
      * configured to reflect the settings in the current tree node.
-     *
      */
     public void updateCurrentGui() {
         updateCurrentNode();
+        refreshCurrentGui();
+    }
+
+    /**
+     * Refresh GUI from node state. 
+     * This method does not update the current node from GUI at the 
+     * difference of {@link GuiPackage#updateCurrentGui()}
+     */
+    public void refreshCurrentGui() {
         currentNode = treeListener.getCurrentNode();
         TestElement element = currentNode.getTestElement();
         JMeterGUIComponent comp = getGui(element);
+        if (comp == null) {
+            log.debug("No component found for {}", currentNode.getName());
+            return;
+        }
         comp.configure(element);
         currentNodeUpdated = false;
     }
@@ -419,20 +443,23 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      * choosing the new node.
      */
     public void updateCurrentNode() {
-        
         try {
             if (currentNode != null && !currentNodeUpdated) {
-                log.debug("Updating current node " + currentNode.getName());
+                log.debug("Updating current node {}", currentNode.getName());
                 JMeterGUIComponent comp = getGui(currentNode.getTestElement());
+                if (comp == null) {
+                    log.debug("No component found for {}", currentNode.getName());
+                    return;
+                }
                 TestElement el = currentNode.getTestElement();
                 int before = 0;
                 int after = 0;
-                final boolean historyEnabled = undoHistory.isEnabled();
-                if(historyEnabled) {
+                final boolean historyEnabled = UndoHistory.isEnabled();
+                if (historyEnabled) {
                     before = getTestElementCheckSum(el);
                 }
                 comp.modifyTestElement(el);
-                if(historyEnabled) {
+                if (historyEnabled) {
                     after = getTestElementCheckSum(el);
                 }
                 if (!historyEnabled || (before != after)) {
@@ -578,24 +605,6 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
         return toolbar;
     }
 
-    /**
-     * Set the menu item toolbar.
-     *
-     * @param newMenuToolBar
-     *            the new menu item toolbar
-     */
-    public void setMenuItemToolbar(JCheckBoxMenuItem newMenuToolBar) {
-        menuToolBar = newMenuToolBar;
-    }
-
-    /**
-     * Get the menu item  toolbar.
-     *
-     * @return the menu item toolbar
-     */
-    public JCheckBoxMenuItem getMenuItemToolbar() {
-        return menuToolBar;
-    }
 
     /**
      * Display the specified popup menu with the source component and location
@@ -623,7 +632,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      */
     public void displayPopUp(Component invoker, MouseEvent e, JPopupMenu popup) {
         if (popup != null) {
-            log.debug("Showing pop up for " + invoker + " at x,y = " + e.getX() + "," + e.getY());
+            log.debug("Showing pop up for {} at x,y = {},{}", invoker, e.getX(), e.getY());
 
             popup.pack();
             popup.show(invoker, e.getX(), e.getY());
@@ -637,7 +646,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      */
     @Override
     public void localeChanged(LocaleChangeEvent event) {
-        // FIrst make sure we save the content of the current GUI (since we
+        // First make sure we save the content of the current GUI (since we
         // will flush it away):
         updateCurrentNode();
 
@@ -656,8 +665,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
         // would populate the current node with the contents of the new GUI --
         // which is empty.]
         MainFrame mf = getMainFrame(); // Fetch once
-        if (mf == null) // Probably caused by unit testing on headless system
-        {
+        if (mf == null) { // Probably caused by unit testing on headless system
             log.warn("Mainframe is null");
         } else {
             mf.setMainPanel((javax.swing.JComponent) getCurrentGui());
@@ -668,6 +676,8 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
     private String testPlanFile;
 
     private final List<Stoppable> stoppables = Collections.synchronizedList(new ArrayList<Stoppable>());
+
+    private TreeNodeNamingPolicy namingPolicy;
 
     /**
      * Sets the filepath of the current test plan. It's shown in the main frame
@@ -688,6 +698,7 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
         } catch (IllegalStateException e1) {
             log.error("Failure setting file server's base dir", e1);
         }
+        testPlanListeners.stream().forEach(TestPlanListener::testPlanLoaded);
     }
 
     public String getTestPlanFile() {
@@ -699,9 +710,11 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      * Clears the test plan file name.
      */
     public void clearTestPlan() {
+        testPlanListeners.stream().forEach(TestPlanListener::beforeTestPlanCleared);
         getTreeModel().clearTestPlan();
         nodesToGui.clear();
         setTestPlanFile(null);
+        testPlanListeners.stream().forEach(TestPlanListener::afterTestPlanCleared);
         undoHistory.clear();
         undoHistory.add(this.treeModel, "Initial Tree");
     }
@@ -732,43 +745,31 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
 
     public static void showMessage(final String message, final String title, final int type){
         if (guiPack == null) {
-            return ;
+            return;
         }
-        SwingUtilities.invokeLater(new Runnable() {
-            @Override
-            public void run() {
-                JOptionPane.showMessageDialog(null,message,title,type);
-            }
-        });
+        SwingUtilities.invokeLater(() -> JOptionPane.showMessageDialog(null,message,title,type));
 
     }
 
     /**
      * Unregister stoppable
-     * @param stoppable Stoppable
+     *
+     * @param stoppableToUnregister Stoppable to unregister
      */
-    public void unregister(Stoppable stoppable) {
-        for (Iterator<Stoppable> iterator = stoppables .iterator(); iterator.hasNext();) {
-            Stoppable stopable = iterator.next();
-            if(stopable == stoppable)
-            {
-                iterator.remove();
-            }
-        }
+    public void unregister(Stoppable stoppableToUnregister) {
+        stoppables.removeIf(stoppable -> stoppable == stoppableToUnregister);
     }
 
     /**
      * Register process to stop on reload
-     * 
-     * @param stoppable
-     *            The {@link Stoppable} to be registered
+     *
+     * @param stoppable The {@link Stoppable} to be registered
      */
     public void register(Stoppable stoppable) {
         stoppables.add(stoppable);
     }
 
     /**
-     *
      * @return copy of list of {@link Stoppable}s
      */
     public List<Stoppable> getStoppables() {
@@ -779,12 +780,13 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
 
     /**
      * Set the menu item LoggerPanel.
+     *
      * @param menuItemLoggerPanel The menu item LoggerPanel
      */
     public void setMenuItemLoggerPanel(JCheckBoxMenuItem menuItemLoggerPanel) {
         this.menuItemLoggerPanel = menuItemLoggerPanel;
     }
-
+        
     /**
      * Get the menu item LoggerPanel.
      *
@@ -792,6 +794,25 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
      */
     public JCheckBoxMenuItem getMenuItemLoggerPanel() {
         return menuItemLoggerPanel;
+    }
+    
+    /**
+     * Set the menu item SaveBeforeRunPanel.
+     * 
+     * @param menuItemSaveBeforeRunPanel
+     *            The menu item SaveBeforeRunPanel
+     */
+    public void setMenuItemSaveBeforeRunPanel(JCheckBoxMenuItem menuItemSaveBeforeRunPanel) {
+        this.menuItemSaveBeforeRunPanel = menuItemSaveBeforeRunPanel;
+    }
+
+    /**
+     * Get the menu item SaveBeforeRunPanel.
+     *
+     * @return the menu item SaveBeforeRunPanel
+     */
+    public JCheckBoxMenuItem getMenuItemSaveBeforeRunPanel() {
+        return menuItemSaveBeforeRunPanel;
     }
 
     /**
@@ -809,12 +830,17 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
     }
 
     /**
-     * Navigate back and forward through undo history
-     *
-     * @param offset int
+     * Navigate back through undo history
      */
-    public void goInHistory(int offset) {
-        undoHistory.moveInHistory(offset, this.treeModel);
+    public void undo() {
+        undoHistory.undo();
+    }
+
+    /**
+     * Navigate forward through undo history
+     */
+    public void redo() {
+        undoHistory.redo();
     }
 
     /**
@@ -846,17 +872,17 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
         while (it.hasNext()) {
             JMeterProperty obj = it.next();
             if (obj instanceof TestElementProperty) {
-                ret ^= getTestElementCheckSum(((TestElementProperty) obj)
-                        .getElement());
+                ret ^= getTestElementCheckSum(
+                        ((TestElementProperty) obj).getElement());
             } else {
                 ret ^= obj.getName().hashCode();
                 String stringValue = obj.getStringValue();
-                if(stringValue != null) {
+                if (stringValue != null) {
                     ret ^= stringValue.hashCode();
                 } else {
-                    if(log.isDebugEnabled()) {
+                    if (log.isDebugEnabled()) {
                         log.debug("obj.getStringValue() returned null for test element:"
-                                +el.getName()+" at property:"+obj.getName());
+                                + el.getName() + " at property:" + obj.getName());
                     }
                 }
             }
@@ -870,6 +896,100 @@ public final class GuiPackage implements LocaleChangeListener, HistoryListener {
     @Override
     public void notifyChangeInHistory(UndoHistory history) {
         ((JMeterToolBar)toolbar).updateUndoRedoIcons(history.canUndo(), history.canRedo());
+    }
+
+    /**
+     * @return {@link TreeNodeNamingPolicy}
+     */
+    public TreeNodeNamingPolicy getNamingPolicy() {
+        if (namingPolicy == null) {
+            final String namingPolicyImplementation =
+                    JMeterUtils.getPropDefault("naming_policy.impl", //$NON-NLS-1$ 
+                            DefaultTreeNodeNamingPolicy.class.getName());
+
+            try {
+                Class<?> implementationClass = Class.forName(namingPolicyImplementation);
+                this.namingPolicy = (TreeNodeNamingPolicy) implementationClass.getDeclaredConstructor().newInstance();
+
+            } catch (Exception ex) {
+                log.error("Failed to create configured naming policy:" + namingPolicyImplementation + ", will use default one", ex);
+                this.namingPolicy = new DefaultTreeNodeNamingPolicy();
+            }
+        }
+        return namingPolicy;
+    }
+
+    /**
+     * Return {@link GuiLogEventBus}.
+     * @return {@link GuiLogEventBus}
+     */
+    public GuiLogEventBus getLogEventBus() {
+        return logEventBus;
+    }
+
+    /**
+     * Begin a group of actions modeled as 1 undo
+     */
+    public void beginUndoTransaction() {
+        undoHistory.beginUndoTransaction();
+    }
+
+    /**
+     * End a group of actions modeled as 1 undo
+     */
+    public void endUndoTransaction() {
+        undoHistory.endUndoTransaction();
+    }
+    
+    
+    /**
+     * Should Save Before Run by Preference Only
+     * @return boolean
+     */
+    public boolean shouldSaveBeforeRunByPreference() {
+        return Boolean.TRUE.toString().
+                equalsIgnoreCase(PREFS.get(SBR_PREFS_KEY, null));
+    }
+    
+    /**
+     * Should Save Before Run by Preference Only
+     * @param saveBeforeRun boolean
+     */
+    public void setSaveBeforeRunByPreference(boolean saveBeforeRun) {
+        PREFS.put(SBR_PREFS_KEY, Boolean.toString(saveBeforeRun)); // $NON-NLS-1$ // $NON-NLS-2$
+    }
+    
+    /**
+     * Should Save Before Run 
+     * Decide by Preference and if not exists by Property
+     * 
+     * @return boolean Should Save Before Run
+     */
+    public boolean shouldSaveBeforeRun() {
+        String sbr = PREFS.get(SBR_PREFS_KEY, null);
+        if (sbr == null) {
+            // use property if no preference
+            return JMeterUtils.getPropDefault(SAVE_BEFORE_RUN_PROPERTY, 
+                    SAVE_BEFORE_RUN_PROPERTY_DEFAULT_VALUE);         
+        } else {
+            return shouldSaveBeforeRunByPreference();
+        }
+    }
+
+    /**
+     * Adds a test plan listener.
+     * @param listener to add
+     */
+    public void addTestPlanListener(TestPlanListener listener) {
+        testPlanListeners.add(listener);
+    }
+
+    /**
+     * Removes a test plan listener.
+     * @param listener to remove
+     */
+    public void removeTestPlanListener(TestPlanListener listener) {
+        testPlanListeners.remove(listener);
     }
 
 }
