@@ -22,7 +22,6 @@ import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -31,6 +30,7 @@ import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
@@ -39,17 +39,17 @@ import java.util.Map;
 import java.util.Properties;
 
 import org.apache.commons.lang3.builder.ToStringBuilder;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.jmeter.reporters.ResultCollectorHelper;
 import org.apache.jmeter.samplers.SampleEvent;
 import org.apache.jmeter.samplers.SampleResult;
-import org.apache.jmeter.testelement.TestElement;
 import org.apache.jmeter.util.JMeterUtils;
 import org.apache.jmeter.util.NameUpdater;
 import org.apache.jorphan.collections.HashTree;
-import org.apache.jorphan.logging.LoggingManager;
 import org.apache.jorphan.util.JMeterError;
 import org.apache.jorphan.util.JOrphanUtils;
-import org.apache.log.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.thoughtworks.xstream.XStream;
 import com.thoughtworks.xstream.converters.ConversionException;
@@ -57,8 +57,7 @@ import com.thoughtworks.xstream.converters.Converter;
 import com.thoughtworks.xstream.converters.DataHolder;
 import com.thoughtworks.xstream.converters.reflection.PureJavaReflectionProvider;
 import com.thoughtworks.xstream.converters.reflection.ReflectionProvider;
-import com.thoughtworks.xstream.io.xml.PrettyPrintWriter;
-import com.thoughtworks.xstream.io.xml.StaxDriver;
+import com.thoughtworks.xstream.io.xml.XppDriver;
 import com.thoughtworks.xstream.mapper.CannotResolveClassException;
 import com.thoughtworks.xstream.mapper.Mapper;
 import com.thoughtworks.xstream.mapper.MapperWrapper;
@@ -70,7 +69,7 @@ import com.thoughtworks.xstream.mapper.MapperWrapper;
  */
 public class SaveService {
 
-    private static final Logger log = LoggingManager.getLoggerForClass();
+    private static final Logger log = LoggerFactory.getLogger(SaveService.class);
 
     // Names of DataHolder entries for JTL processing
     public static final String SAMPLE_EVENT_OBJECT = "SampleEvent"; // $NON-NLS-1$
@@ -81,7 +80,7 @@ public class SaveService {
 
     private static final class XStreamWrapper extends XStream {
         private XStreamWrapper(ReflectionProvider reflectionProvider) {
-            super(reflectionProvider, new StaxDriver());
+            super(reflectionProvider);
         }
 
         // Override wrapMapper in order to insert the Wrapper in the chain
@@ -116,17 +115,19 @@ public class SaveService {
     private static final XStream JTLSAVER = new XStreamWrapper(new PureJavaReflectionProvider());
     static {
         JTLSAVER.setMode(XStream.NO_REFERENCES); // This is needed to stop XStream keeping copies of each class
+        JMeterUtils.setupXStreamSecurityPolicy(JMXSAVER);
+        JMeterUtils.setupXStreamSecurityPolicy(JTLSAVER);
     }
 
     // The XML header, with placeholder for encoding, since that is controlled by property
     private static final String XML_HEADER = "<?xml version=\"1.0\" encoding=\"<ph>\"?>"; // $NON-NLS-1$
 
     // Default file name
-    private static final String SAVESERVICE_PROPERTIES_FILE = "/bin/saveservice.properties"; // $NON-NLS-1$
+    private static final String SAVESERVICE_PROPERTIES_FILE = "saveservice.properties"; // $NON-NLS-1$
 
     // Property name used to define file name
     private static final String SAVESERVICE_PROPERTIES = "saveservice_properties"; // $NON-NLS-1$
-
+    
     // Define file format versions
     private static final String VERSION_2_2 = "2.2";  // $NON-NLS-1$
 
@@ -149,18 +150,18 @@ public class SaveService {
     
     // Must match _version property value in saveservice.properties
     // used to ensure saveservice.properties and SaveService are updated simultaneously
-    static final String PROPVERSION = "2.9";// Expected version $NON-NLS-1$
+    static final String PROPVERSION = "5.0";// Expected version $NON-NLS-1$
 
     // Internal information only
     private static String fileVersion = ""; // computed from saveservice.properties file// $NON-NLS-1$
     // Must match the sha1 checksum of the file saveservice.properties (without newline character),
     // used to ensure saveservice.properties and SaveService are updated simultaneously
-    static final String FILEVERSION = "2e0ec2b2360e52cd5de4e0f20fa51c1809f6895c"; // Expected value $NON-NLS-1$
+    static final String FILEVERSION = "e922e4aa06ed9f253d68c13f445d5bfedaccd876"; // Expected value $NON-NLS-1$
 
     private static String fileEncoding = ""; // read from properties file// $NON-NLS-1$
 
     static {
-        log.info("Testplan (JMX) version: "+VERSION_2_2+". Testlog (JTL) version: "+VERSION_2_2);
+        log.info("Testplan (JMX) version: {}. Testlog (JTL) version: {}", VERSION_2_2, VERSION_2_2);
         initProps();
         checkVersions();
     }
@@ -172,32 +173,40 @@ public class SaveService {
         for (String a : aliases){
             Object old = aliasToClass.setProperty(a,clazz);
             if (old != null){
-                log.error("Duplicate class detected for "+alias+": "+clazz+" & "+old);                
+                log.error("Duplicate class detected for {}: {} & {}", alias, clazz, old);
             }
         }
         Object oldval=classToAlias.setProperty(clazz,alias);
         if (oldval != null) {
-            log.error("Duplicate alias detected for "+clazz+": "+alias+" & "+oldval);
+            log.error("Duplicate alias detected for {}: {} & {}", clazz, alias, oldval);
         }
     }
 
+    private static File getSaveServiceFile() {
+        String saveServiceProps = JMeterUtils.getPropDefault(SAVESERVICE_PROPERTIES,SAVESERVICE_PROPERTIES_FILE); //$NON-NLS-1$
+        if (saveServiceProps.length() > 0){ //$NON-NLS-1$
+            return JMeterUtils.findFile(saveServiceProps);
+        }
+        throw new IllegalStateException("Could not find file configured in saveservice_properties property set to:"+saveServiceProps);
+    }
+    
     public static Properties loadProperties() throws IOException{
         Properties nameMap = new Properties();
-        try (FileInputStream fis = new FileInputStream(JMeterUtils.getJMeterHome()
-                + JMeterUtils.getPropDefault(SAVESERVICE_PROPERTIES, SAVESERVICE_PROPERTIES_FILE))){
-            nameMap.load(fis);
+        File saveServiceFile = getSaveServiceFile();
+        if (saveServiceFile.canRead()){
+            try (FileInputStream fis = new FileInputStream(saveServiceFile)){
+                nameMap.load(fis);
+            }
         }
         return nameMap;
     }
 
     private static String getChecksumForPropertiesFile()
             throws NoSuchAlgorithmException, IOException {
-        MessageDigest md = MessageDigest.getInstance("SHA1");
-        try (FileReader fileReader = new FileReader(
-                    JMeterUtils.getJMeterHome()
-                    + JMeterUtils.getPropDefault(SAVESERVICE_PROPERTIES,
-                    SAVESERVICE_PROPERTIES_FILE));
-                BufferedReader reader = new BufferedReader(fileReader)) {
+        MessageDigest md = MessageDigest.getInstance("SHA-1");
+        File saveServiceFile = getSaveServiceFile();
+        try (BufferedReader reader = 
+                Files.newBufferedReader(saveServiceFile.toPath(), Charset.defaultCharset())) {
             String line = null;
             while ((line = reader.readLine()) != null) {
                 md.update(line.getBytes());
@@ -210,7 +219,7 @@ public class SaveService {
         try {
             fileVersion = getChecksumForPropertiesFile();
         } catch (IOException | NoSuchAlgorithmException e) {
-            log.fatalError("Can't compute checksum for saveservice properties file", e);
+            log.error("Can't compute checksum for saveservice properties file", e);
             throw new JMeterError("JMeter requires the checksum of saveservice properties file to continue", e);
         }
         try {
@@ -225,35 +234,34 @@ public class SaveService {
                     // process special keys
                     if (key.equalsIgnoreCase("_version")) { // $NON-NLS-1$
                         propertiesVersion = val;
-                        log.info("Using SaveService properties version " + propertiesVersion);
+                        log.info("Using SaveService properties version {}", propertiesVersion);
                     } else if (key.equalsIgnoreCase("_file_version")) { // $NON-NLS-1$
                         log.info("SaveService properties file version is now computed by a checksum,"
                                 + "the property _file_version is not used anymore and can be removed.");
                     } else if (key.equalsIgnoreCase("_file_encoding")) { // $NON-NLS-1$
                         fileEncoding = val;
-                        log.info("Using SaveService properties file encoding " + fileEncoding);
+                        log.info("Using SaveService properties file encoding {}", fileEncoding);
                     } else {
                         key = key.substring(1);// Remove the leading "_"
-                        try {
-                            final String trimmedValue = val.trim();
-                            if (trimmedValue.equals("collection") // $NON-NLS-1$
-                             || trimmedValue.equals("mapping")) { // $NON-NLS-1$
-                                registerConverter(key, JMXSAVER, true);
-                                registerConverter(key, JTLSAVER, true);
-                            } else {
-                                registerConverter(key, JMXSAVER, false);
-                                registerConverter(key, JTLSAVER, false);
-                            }
-                        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException | IllegalArgumentException|
-                                SecurityException | InvocationTargetException | NoSuchMethodException e1) {
-                            log.warn("Can't register a converter: " + key, e1);
-                        }
+                        registerConverter(key, val);
                     }
                 }
             }
         } catch (IOException e) {
-            log.fatalError("Bad saveservice properties file", e);
+            log.error("Bad saveservice properties file", e);
             throw new JMeterError("JMeter requires the saveservice properties file to continue");
+        }
+    }
+
+    private static void registerConverter(String key, String val) {
+        try {
+            final String trimmedValue = val.trim();
+            boolean useMapper = "collection".equals(trimmedValue) || "mapping".equals(trimmedValue); // $NON-NLS-1$ $NON-NLS-2$
+            registerConverter(key, JMXSAVER, useMapper);
+            registerConverter(key, JTLSAVER, useMapper);
+        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException | IllegalArgumentException|
+                SecurityException | InvocationTargetException | NoSuchMethodException e1) {
+            log.warn("Can't register a converter: {}", key, e1);
         }
     }
 
@@ -274,11 +282,9 @@ public class SaveService {
             InvocationTargetException, NoSuchMethodException,
             ClassNotFoundException {
         if (useMapper){
-            jmxsaver.registerConverter((Converter) Class.forName(key).getConstructor(
-                    new Class[] { Mapper.class }).newInstance(
-                            new Object[] { jmxsaver.getMapper() }));
+            jmxsaver.registerConverter((Converter) Class.forName(key).getConstructor(Mapper.class).newInstance(jmxsaver.getMapper()));
         } else {
-            jmxsaver.registerConverter((Converter) Class.forName(key).newInstance());
+            jmxsaver.registerConverter((Converter) Class.forName(key).getDeclaredConstructor().newInstance());
         }
     }
 
@@ -302,7 +308,7 @@ public class SaveService {
         // Use deprecated method, to avoid duplicating code
         ScriptWrapper wrapper = new ScriptWrapper();
         wrapper.testPlan = tree;
-        JMXSAVER.marshal(wrapper, new PrettyPrintWriter(outputStreamWriter));
+        JMXSAVER.toXML(wrapper, outputStreamWriter);
         outputStreamWriter.write('\n');// Ensure terminated properly
         outputStreamWriter.close();
     }
@@ -313,7 +319,7 @@ public class SaveService {
         OutputStreamWriter outputStreamWriter = getOutputStreamWriter(out);
         writeXmlHeader(outputStreamWriter);
         // Use deprecated method, to avoid duplicating code
-        JMXSAVER.marshal(el, new PrettyPrintWriter(outputStreamWriter));
+        JMXSAVER.toXML(el, outputStreamWriter);
         outputStreamWriter.close();
     }
 
@@ -335,13 +341,13 @@ public class SaveService {
      * @throws IOException when writing data to output fails
      */
     // Used by ResultCollector.sampleOccurred(SampleEvent event)
-    public synchronized static void saveSampleResult(SampleEvent evt, Writer writer) throws IOException {
+    public static synchronized void saveSampleResult(SampleEvent evt, Writer writer) throws IOException {
         DataHolder dh = JTLSAVER.newDataHolder();
         dh.put(SAMPLE_EVENT_OBJECT, evt);
         // This is effectively the same as saver.toXML(Object, Writer) except we get to provide the DataHolder
         // Don't know why there is no method for this in the XStream class
         try {
-            JTLSAVER.marshal(evt.getResult(), new PrettyPrintWriter(writer), dh);
+            JTLSAVER.marshal(evt.getResult(), new XppDriver().createWriter(writer), dh);
         } catch(RuntimeException e) {
             throw new IllegalArgumentException("Failed marshalling:"+(evt.getResult() != null ? showDebuggingInfo(evt.getResult()) : "null"), e);
         }
@@ -357,37 +363,9 @@ public class SaveService {
         try {
             return "class:"+result.getClass()+",content:"+ToStringBuilder.reflectionToString(result);
         } catch(Exception e) {
-            return "Exception occured creating debug from event, message:"+e.getMessage();
+            return "Exception occurred creating debug from event, message:"+e.getMessage();
         }
     }
-
-    /**
-     * @param elem test element
-     * @param writer output stream which must be created using {@link #getFileEncoding(String)}
-     * @throws IOException when writing data to output fails
-     */
-    // Used by ResultCollector#recordStats()
-    public synchronized static void saveTestElement(TestElement elem, Writer writer) throws IOException {
-        JMXSAVER.toXML(elem, writer); // TODO should this be JTLSAVER? Only seems to be called by MonitorHealthVisualzer
-        writer.write('\n');
-    }
-
-    private static boolean versionsOK = true;
-
-//  private static void checkVersion(Class clazz, String expected) {
-//
-//      String actual = "*NONE*"; // $NON-NLS-1$
-//      try {
-//          actual = (String) clazz.getMethod("getVersion", null).invoke(null, null);
-//          actual = extractVersion(actual);
-//      } catch (Exception ignored) {
-//          // Not needed
-//      }
-//      if (0 != actual.compareTo(expected)) {
-//          versionsOK = false;
-//          log.warn("Version mismatch: expected '" + expected + "' found '" + actual + "' in " + clazz.getName());
-//      }
-//  }
 
     // Routines for TestSaveService
     static String getPropertyVersion(){
@@ -402,14 +380,13 @@ public class SaveService {
     static List<String> checkClasses(){
         final ClassLoader classLoader = SaveService.class.getClassLoader();
         List<String> missingClasses = new ArrayList<>();
-        //boolean OK = true;
         for (Object clazz : classToAlias.keySet()) {
             String name = (String) clazz;
             if (!NameUpdater.isMapped(name)) {// don't bother checking class is present if it is to be updated
                 try {
                     Class.forName(name, false, classLoader);
                 } catch (ClassNotFoundException e) {
-                        log.error("Unexpected entry in saveservice.properties; class does not exist and is not upgraded: "+name);              
+                        log.error("Unexpected entry in saveservice.properties; class does not exist and is not upgraded: {}", name);
                         missingClasses.add(name);
                 }
             }
@@ -417,42 +394,10 @@ public class SaveService {
         return missingClasses;
     }
 
-    static boolean checkVersions() {
-        versionsOK = true;
-        // Disable converter version checks as they are more of a nuisance than helpful
-//      checkVersion(BooleanPropertyConverter.class, "493779"); // $NON-NLS-1$
-//      checkVersion(HashTreeConverter.class, "514283"); // $NON-NLS-1$
-//      checkVersion(IntegerPropertyConverter.class, "493779"); // $NON-NLS-1$
-//      checkVersion(LongPropertyConverter.class, "493779"); // $NON-NLS-1$
-//      checkVersion(MultiPropertyConverter.class, "514283"); // $NON-NLS-1$
-//      checkVersion(SampleResultConverter.class, "571992"); // $NON-NLS-1$
-//
-//        // Not built until later, so need to use this method:
-//        try {
-//            checkVersion(
-//                    Class.forName("org.apache.jmeter.protocol.http.util.HTTPResultConverter"), // $NON-NLS-1$
-//                    "514283"); // $NON-NLS-1$
-//        } catch (ClassNotFoundException e) {
-//            versionsOK = false;
-//            log.warn(e.getLocalizedMessage());
-//        }
-//      checkVersion(StringPropertyConverter.class, "493779"); // $NON-NLS-1$
-//      checkVersion(TestElementConverter.class, "549987"); // $NON-NLS-1$
-//      checkVersion(TestElementPropertyConverter.class, "549987"); // $NON-NLS-1$
-//      checkVersion(ScriptWrapperConverter.class, "514283"); // $NON-NLS-1$
-//      checkVersion(TestResultWrapperConverter.class, "514283"); // $NON-NLS-1$
-//        checkVersion(SampleSaveConfigurationConverter.class,"549936"); // $NON-NLS-1$
-
+    private static void checkVersions() {
         if (!PROPVERSION.equalsIgnoreCase(propertiesVersion)) {
-            log.warn("Bad _version - expected " + PROPVERSION + ", found " + propertiesVersion + ".");
+            log.warn("Bad _version - expected {}, found {}.", PROPVERSION, propertiesVersion);
         }
-//        if (!FILEVERSION.equalsIgnoreCase(fileVersion)) {
-//            log.warn("Bad _file_version - expected " + FILEVERSION + ", found " + fileVersion +".");
-//        }
-        if (versionsOK) {
-            log.info("All converter versions present and correct");
-        }
-        return versionsOK;
     }
 
     /**
@@ -469,27 +414,8 @@ public class SaveService {
         dh.put(RESULTCOLLECTOR_HELPER_OBJECT, resultCollectorHelper); // Allow TestResultWrapper to feed back the samples
         // This is effectively the same as saver.fromXML(InputStream) except we get to provide the DataHolder
         // Don't know why there is no method for this in the XStream class
-        JTLSAVER.unmarshal(new StaxDriver().createReader(reader), null, dh);
+        JTLSAVER.unmarshal(new XppDriver().createReader(reader), null, dh);
         inputStreamReader.close();
-    }
-
-    /**
-     * Load a Test tree (JMX file)
-     * @param reader the JMX file as an {@link InputStream}
-     * @return the loaded tree or null if an error occurs
-     * @throws IOException if there is a problem reading the file or processing it
-     * @deprecated use {@link SaveService}{@link #loadTree(File)}
-     */
-    @Deprecated
-    public static HashTree loadTree(InputStream reader) throws IOException {
-        try {
-            return readTree(reader, null);
-        } catch(IllegalArgumentException e) {
-            log.error("Problem loading XML, message:"+e.getMessage(), e);
-            return null;
-        } finally {
-            JOrphanUtils.closeQuietly(reader);
-        }
     }
     
     /**
@@ -499,29 +425,27 @@ public class SaveService {
      * @throws IOException if there is a problem reading the file or processing it
      */
     public static HashTree loadTree(File file) throws IOException {
-        log.info("Loading file: " + file);
-        try (InputStream reader = new FileInputStream(file)){
-            return readTree(reader, file);
+        log.info("Loading file: {}", file);
+        try (InputStream inputStream = new FileInputStream(file);
+                BufferedInputStream bufferedInputStream = 
+                    new BufferedInputStream(inputStream)){
+            return readTree(bufferedInputStream, file);
         }
     }
 
     /**
      * 
-     * @param reader {@link InputStream} 
+     * @param inputStream {@link InputStream} 
      * @param file the JMX file used only for debug, can be null
      * @return the loaded tree
      * @throws IOException if there is a problem reading the file or processing it
      */
-    private static HashTree readTree(InputStream reader, File file)
+    private static HashTree readTree(InputStream inputStream, File file)
             throws IOException {
-        if (!reader.markSupported()) {
-            reader = new BufferedInputStream(reader);
-        }
-        reader.mark(Integer.MAX_VALUE);
         ScriptWrapper wrapper = null;
         try {
             // Get the InputReader to use
-            InputStreamReader inputStreamReader = getInputStreamReader(reader);
+            InputStreamReader inputStreamReader = getInputStreamReader(inputStream);
             wrapper = (ScriptWrapper) JMXSAVER.fromXML(inputStreamReader);
             inputStreamReader.close();
             if (wrapper == null){
@@ -529,17 +453,13 @@ public class SaveService {
                 return null;
             }
             return wrapper.testPlan;
-        } catch (CannotResolveClassException e) {
+        } catch (CannotResolveClassException | ConversionException | NoClassDefFoundError e) {
             if(file != null) {
-                throw new IllegalArgumentException("Problem loading XML from:'"+file.getAbsolutePath()+"', cannot determine class for element: " + e, e);
+                throw new IllegalArgumentException("Problem loading XML from:'"+file.getAbsolutePath()+"'. \nCause:\n"+
+                        ExceptionUtils.getRootCauseMessage(e) +"\n\n Detail:"+e, e);
             } else {
-                throw new IllegalArgumentException("Problem loading XML, cannot determine class for element: " + e, e);
-            }
-        } catch (ConversionException | NoClassDefFoundError e) {
-            if(file != null) {
-                throw new IllegalArgumentException("Problem loading XML from:'"+file.getAbsolutePath()+"', missing class "+e , e);
-            } else {
-                throw new IllegalArgumentException("Problem loading XML, missing class "+e , e);
+                throw new IllegalArgumentException("Problem loading XML. \nCause:\n"+
+                        ExceptionUtils.getRootCauseMessage(e) +"\n\n Detail:"+e, e);
             }
         }
 
@@ -547,25 +467,13 @@ public class SaveService {
     private static InputStreamReader getInputStreamReader(InputStream inStream) {
         // Check if we have a encoding to use from properties
         Charset charset = getFileEncodingCharset();
-        if(charset != null) {
-            return new InputStreamReader(inStream, charset);
-        }
-        else {
-            // We use the default character set encoding of the JRE
-            return new InputStreamReader(inStream);
-        }
+        return new InputStreamReader(inStream, charset);
     }
 
     private static OutputStreamWriter getOutputStreamWriter(OutputStream outStream) {
         // Check if we have a encoding to use from properties
         Charset charset = getFileEncodingCharset();
-        if(charset != null) {
-            return new OutputStreamWriter(outStream, charset);
-        }
-        else {
-            // We use the default character set encoding of the JRE
-            return new OutputStreamWriter(outStream);
-        }
+        return new OutputStreamWriter(outStream, charset);
     }
 
     /**
@@ -584,27 +492,28 @@ public class SaveService {
         }
     }
 
+    // @NotNull
     private static Charset getFileEncodingCharset() {
         // Check if we have a encoding to use from properties
         if(fileEncoding != null && fileEncoding.length() > 0) {
             return Charset.forName(fileEncoding);
         }
         else {
+            
             // We use the default character set encoding of the JRE
-            return null;
+            log.info("fileEncoding not defined - using JRE default");
+            return Charset.defaultCharset();
         }
     }
 
     private static void writeXmlHeader(OutputStreamWriter writer) throws IOException {
         // Write XML header if we have the charset to use for encoding
         Charset charset = getFileEncodingCharset();
-        if(charset != null) {
-            // We do not use getEncoding method of Writer, since that returns
-            // the historical name
-            String header = XML_HEADER.replaceAll("<ph>", charset.name());
-            writer.write(header);
-            writer.write('\n');
-        }
+        // We do not use getEncoding method of Writer, since that returns
+        // the historical name
+        String header = XML_HEADER.replaceAll("<ph>", charset.name());
+        writer.write(header);
+        writer.write('\n');
     }
 
 //  Normal output
@@ -624,11 +533,8 @@ public class SaveService {
      * @return string with details of error
      */
     public static String CEtoString(ConversionException ce){
-        String msg =
-            "XStream ConversionException at line: " + ce.get("line number")
-            + "\n" + ce.get("message")
-            + "\nPerhaps a missing jar? See log file.";
-        return msg;
+        return "XStream ConversionException at line: " + ce.get("line number") + "\n" + ce.get("message")
+                + "\nPerhaps a missing jar? See log file.";
     }
 
     public static String getPropertiesVersion() {
