@@ -24,8 +24,8 @@ import org.apache.jmeter.testelement.TestPlan;
 import org.apache.jmeter.testelement.property.JMeterProperty;
 import org.apache.jmeter.testelement.property.PropertyIterator;
 import org.apache.jmeter.util.NameUpdater;
-import org.apache.jorphan.logging.LoggingManager;
-import org.apache.log.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.thoughtworks.xstream.converters.MarshallingContext;
 import com.thoughtworks.xstream.converters.UnmarshallingContext;
@@ -35,7 +35,7 @@ import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
 import com.thoughtworks.xstream.mapper.Mapper;
 
 public class TestElementConverter extends AbstractCollectionConverter {
-    private static final Logger log = LoggingManager.getLoggerForClass();
+    private static final Logger log = LoggerFactory.getLogger(TestElementConverter.class);
 
 
     /**
@@ -89,15 +89,14 @@ public class TestElementConverter extends AbstractCollectionConverter {
         }
         // Update the test class name if necessary (Bug 52466)
         String inputName = type.getName();
-        String targetName = inputName;
         String guiClassName = SaveService.aliasToClass(reader.getAttribute(ConversionHelp.ATT_TE_GUICLASS));
-        targetName = NameUpdater.getCurrentTestName(inputName, guiClassName);
+        String targetName = NameUpdater.getCurrentTestName(inputName, guiClassName);
         if (!targetName.equals(inputName)) { // remap the class name
             type = mapper().realClass(targetName);
         }
         context.put(SaveService.TEST_CLASS_NAME, targetName); // needed by property converters  (Bug 52466)
         try {
-            TestElement el = (TestElement) type.newInstance();
+            TestElement el = (TestElement) type.getDeclaredConstructor().newInstance();
             // No need to check version, just process the attributes if present
             ConversionHelp.restoreSpecialProperties(el, reader);
             // Slight hack - we need to ensure the TestClass is not reset by the previous call
@@ -111,8 +110,8 @@ public class TestElementConverter extends AbstractCollectionConverter {
                 reader.moveUp();
             }
             return el;
-        } catch (InstantiationException | IllegalAccessException e) {
-            log.error("TestElement not instantiable: " + type, e);
+        } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException e) {
+            log.error("TestElement not instantiable: {}", type, e);
             return null;
         }
     }
