@@ -54,7 +54,7 @@ public class CollectionProperty extends MultiProperty {
 
     @Override
     public int hashCode() {
-        return (value == null ? 0 : value.hashCode());
+        return value == null ? 0 : value.hashCode();
     }
 
     public void remove(String prop) {
@@ -143,7 +143,7 @@ public class CollectionProperty extends MultiProperty {
     private Collection<JMeterProperty> cloneCollection() {
         try {
             @SuppressWarnings("unchecked") // value is of type Collection<JMeterProperty>
-            Collection<JMeterProperty> newCol = value.getClass().newInstance();
+            Collection<JMeterProperty> newCol = value.getClass().getDeclaredConstructor().newInstance();
             for (JMeterProperty jMeterProperty : this) {
                 newCol.add(jMeterProperty.clone());
             }
@@ -186,7 +186,7 @@ public class CollectionProperty extends MultiProperty {
      */
     @Override
     protected Class<? extends JMeterProperty> getPropertyType() {
-        if (value != null && value.size() > 0) {
+        if (value != null && !value.isEmpty()) {
             return value.iterator().next().getClass();
         }
         return NullProperty.class;
