@@ -26,11 +26,12 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.jmeter.gui.GuiPackage;
+import org.apache.jmeter.rmi.RmiUtils;
 import org.apache.jmeter.testelement.ThreadListener;
 import org.apache.jmeter.util.JMeterUtils;
-import org.apache.jorphan.logging.LoggingManager;
 import org.apache.jorphan.reflect.ClassFinder;
-import org.apache.log.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * RMI Implementation, client side code (ie executed on Controller)
@@ -38,48 +39,52 @@ import org.apache.log.Logger;
  */
 public class RemoteThreadsListenerImpl extends UnicastRemoteObject implements
         RemoteThreadsListener, ThreadListener {
-    private static final Logger log = LoggingManager.getLoggerForClass();
+    private static final Logger log = LoggerFactory.getLogger(RemoteThreadsListenerImpl.class);
     private final List<RemoteThreadsLifeCycleListener> listeners = new ArrayList<>();
 
     /**
      * 
      */
-    private static final long serialVersionUID = 4790505101521183660L;
+    private static final long serialVersionUID = 1L;
     /**
      * 
      */
-    private static final int DEFAULT_LOCAL_PORT = 
-            JMeterUtils.getPropDefault("client.rmi.localport", 0); // $NON-NLS-1$
+    private static final int DEFAULT_LOCAL_PORT = addOffset(
+            JMeterUtils.getPropDefault("client.rmi.localport", 0), 1); // $NON-NLS-1$
 
     /**
      * @throws RemoteException if failed to export object
      */
     public RemoteThreadsListenerImpl() throws RemoteException {
-        super(DEFAULT_LOCAL_PORT);
+        super(DEFAULT_LOCAL_PORT, RmiUtils.createClientSocketFactory(), RmiUtils.createServerSocketFactory());
         try {
             List<String> listClasses = ClassFinder.findClassesThatExtend(
                     JMeterUtils.getSearchPaths(), 
                     new Class[] {RemoteThreadsLifeCycleListener.class }); 
             for (String strClassName : listClasses) {
                 try {
-                    if(log.isDebugEnabled()) {
-                        log.debug("Loading class: "+ strClassName);
-                    }
+                    log.debug("Loading class: {}", strClassName);
                     Class<?> commandClass = Class.forName(strClassName);
                     if (!Modifier.isAbstract(commandClass.getModifiers())) {
-                        if(log.isDebugEnabled()) {
-                            log.debug("Instantiating: "+ commandClass.getName());
-                        }
-                        RemoteThreadsLifeCycleListener listener = (RemoteThreadsLifeCycleListener) commandClass.newInstance();
+                        log.debug("Instantiating: {}", commandClass);
+                        RemoteThreadsLifeCycleListener listener = (RemoteThreadsLifeCycleListener) commandClass.getDeclaredConstructor().newInstance();
                         listeners.add(listener);
                     }
                 } catch (Exception e) {
-                    log.error("Exception registering "+RemoteThreadsLifeCycleListener.class.getName() + " with implementation:"+strClassName, e);
+                    log.error("Exception registering {} with implementation: {}", RemoteThreadsLifeCycleListener.class,
+                            strClassName, e);
                 }
             }
         } catch (IOException e) {
-            log.error("Exception finding implementations of "+RemoteThreadsLifeCycleListener.class, e);
+            log.error("Exception finding implementations of {}", RemoteThreadsLifeCycleListener.class, e);
         }
+    }
+
+    private static int addOffset(int port, int offset) {
+        if (port == 0) {
+            return 0;
+        }
+        return port + offset;
     }
 
     /**
